--- a/NesCollectorWebUI/NesCollectorWebUI/NesCollectorWebUI.csproj
+++ b/NesCollectorWebUI/NesCollectorWebUI/NesCollectorWebUI.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\NesCollector.Data\NesCollector.Data.csproj" />
+    <ProjectReference Include="..\NesCollector.Service\NesCollector.Service.csproj" />
   </ItemGroup>
 
 </Project>
