--- a/NesCollectorWebUI/NesCollector.Data/NesCollector.Data.csproj
+++ b/NesCollectorWebUI/NesCollector.Data/NesCollector.Data.csproj
@@ -15,6 +15,9 @@
     <Compile Remove="Migrations\20190207003727_initial.cs" />
     <Compile Remove="Migrations\20190207010811_init.cs" />
     <Compile Remove="Migrations\20190207011205_init.cs" />
+    <Compile Remove="Migrations\20190219211046_identity-provider.cs" />
+    <Compile Remove="Migrations\20190219212026_identity-provider.cs" />
+    <Compile Remove="Migrations\20190219213037_identity-provider.cs" />
   </ItemGroup>
 
   <ItemGroup>
