--- a/NesCollectorWebUI/NesCollector.Data/NesCollector.Data.csproj
+++ b/NesCollectorWebUI/NesCollector.Data/NesCollector.Data.csproj
@@ -27,6 +27,13 @@
     <Compile Remove="Migrations\20190222190705_adding-pricing-to-games-table.cs" />
     <Compile Remove="Migrations\20190222191119_adding-pricing-to-games-table.cs" />
     <Compile Remove="Migrations\20190222191717_adding-pricing-to-games-table.cs" />
+    <Compile Remove="Migrations\20190223224732_modded-services-for-gameconsole-model-part-2.cs" />
+    <Compile Remove="Migrations\20190223224932_modded-services-for-gameconsole-model-part-3.cs" />
+    <Compile Remove="Migrations\20190223225326_modded-services-for-gameconsole-model-part-2.cs" />
+    <Compile Remove="Migrations\20190223225416_modded-services-for-gameconsole-model-part-2.cs" />
+    <Compile Remove="Migrations\20190223225748_modded-services-for-gameconsole-model-part-2.cs" />
+    <Compile Remove="Migrations\20190223230200_modded-services-for-gameconsole-model-part-2.cs" />
+    <Compile Remove="Migrations\20190223230445_modded-services-for-gameconsole-model-part-2.cs" />
   </ItemGroup>
 
   <ItemGroup>
